-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 12
-
Component/s: hotspot
-
b07
with JDK-8208677 integrated, the following is observed building Minimal VM
Creating support/modules_libs/java.base/minimal/libjvm.so from 477 file(s)
Creating hotspot/variant-minimal/libjvm/gtest/libjvm.so from 80 file(s)
Creating hotspot/variant-minimal/libjvm/gtest/gtestLauncher from 1 file(s)
In file included from /home/bellsoft/jdk/src/hotspot/share/gc/serial/markSweep.inline.hpp:28:0,
from /home/bellsoft/jdk/src/hotspot/share/gc/shared/space.inline.hpp:39,
from /home/bellsoft/jdk/src/hotspot/share/gc/shared/blockOffsetTable.cpp:28:
/home/bellsoft/jdk/src/hotspot/share/classfile/classLoaderData.inline.hpp: In static member function ‘static bool ClassLoaderDataGraph::should_clean_metaspaces_and_reset()’:
/home/bellsoft/jdk/src/hotspot/share/classfile/classLoaderData.inline.hpp:99:76: error: ‘has_previous_versions’ is not a member of ‘InstanceKlass’
return (do_cleaning && _should_clean_deallocate_lists) || InstanceKlass::has_previous_versions();
^~~~~~~~~~~~~~~~~~~~~
Creating support/modules_libs/java.base/minimal/libjvm.so from 477 file(s)
Creating hotspot/variant-minimal/libjvm/gtest/libjvm.so from 80 file(s)
Creating hotspot/variant-minimal/libjvm/gtest/gtestLauncher from 1 file(s)
In file included from /home/bellsoft/jdk/src/hotspot/share/gc/serial/markSweep.inline.hpp:28:0,
from /home/bellsoft/jdk/src/hotspot/share/gc/shared/space.inline.hpp:39,
from /home/bellsoft/jdk/src/hotspot/share/gc/shared/blockOffsetTable.cpp:28:
/home/bellsoft/jdk/src/hotspot/share/classfile/classLoaderData.inline.hpp: In static member function ‘static bool ClassLoaderDataGraph::should_clean_metaspaces_and_reset()’:
/home/bellsoft/jdk/src/hotspot/share/classfile/classLoaderData.inline.hpp:99:76: error: ‘has_previous_versions’ is not a member of ‘InstanceKlass’
return (do_cleaning && _should_clean_deallocate_lists) || InstanceKlass::has_previous_versions();
^~~~~~~~~~~~~~~~~~~~~
- relates to
-
JDK-8208677 Move inner metaspace cleaning out of class unloading
-
- Resolved
-