8209378: Fix Minimal VM after JDK-8208677

Reviewed-by: coleenp, shade